<resources>
    <string name="app_name">testcase3</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="upload_item">Upload item</string>
    <string name="change_photo">Change photo</string>
    <string name="profile">Profile</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="user_exist">The user already exists</string>
    <string name="user_not_exist">User is not found</string>
    <string name="alert_title">Alert</string>
    <string name="location">Location</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="view_all">View all</string>
    <string name="colors">Color:</string>
</resources>