<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="121dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/welcome_back"
        android:textColor="#161826"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="60dp"
        android:autofillHints="name"
        android:background="@drawable/login_edittext_background"
        android:backgroundTint="#E8E8E8"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="text|textPersonName"
        android:paddingVertical="7dp"
        android:textColor="#7B7B7B"
        android:textColorHint="#7B7B7B"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <TextView
        android:id="@+id/login_first_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/enter_first_name"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/login_first_name"
        app:layout_constraintTop_toBottomOf="@id/login_first_name"
        tools:ignore="SmallSp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="35dp"
        android:autofillHints="password"
        android:background="@drawable/login_edittext_background"
        android:backgroundTint="#E8E8E8"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingVertical="7dp"
        android:textColor="#7B7B7B"
        android:textColorHint="#7B7B7B"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_first_name" />

    <TextView
        android:id="@+id/login_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/enter_password"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        tools:ignore="SmallSp"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/login_password_visibility_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_eye_off"
        app:layout_constraintBottom_toBottomOf="@id/login_password"
        app:layout_constraintEnd_toEndOf="@id/login_password"
        app:layout_constraintTop_toTopOf="@id/login_password"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="43dp"
        android:layout_marginTop="99dp"
        android:backgroundTint="#4E55D7"
        android:fontFamily="@font/montserrat_bold"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:paddingVertical="14sp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#EAEAEA"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>