<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/profile"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="19dp"
        android:padding="1dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:strokeColor="#C0C0C0"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/change_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/change_photo"
        android:textColor="#808080"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/profile_name_title"
        android:textColor="#3F3F3F"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_photo_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="43dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/login_edittext_background"
        android:backgroundTint="#4E55D7"
        android:paddingVertical="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name">

        <TextView
            android:id="@+id/profile_upload_button_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:letterSpacing="0"
            android:text="@string/upload_item"
            android:textAllCaps="false"
            android:textColor="#EAEAEA"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profile_upload_button_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/profile_trade_store_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_upload_button">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@drawable/login_edittext_background"
            android:backgroundTint="#EEEFF4"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_credit_card"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/trade_store"
            android:textColor="#040402"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_payment_method_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_trade_store_button">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@drawable/login_edittext_background"
            android:backgroundTint="#EEEFF4"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_credit_card"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/payment_method"
            android:textColor="#040402"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_balance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_payment_method_button">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@drawable/login_edittext_background"
            android:backgroundTint="#EEEFF4"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_credit_card"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/balance"
            android:textColor="#040402"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#040402"
            android:textSize="14sp"
            tools:text="$1593" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_restore_purchase_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_balance_button">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@drawable/login_edittext_background"
            android:backgroundTint="#EEEFF4"
            android:paddingVertical="11dp"
            android:src="@drawable/ic_restore"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/restore_purchase"
            android:textColor="#040402"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_arrow"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_help_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_restore_purchase_button">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@drawable/login_edittext_background"
            android:backgroundTint="#EEEFF4"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_help"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/help"
            android:textColor="#040402"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_log_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_help_button">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@drawable/login_edittext_background"
            android:backgroundTint="#EEEFF4"
            android:paddingVertical="10dp"
            android:src="@drawable/ic_log_out"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/log_out"
            android:textColor="#040402"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>